--- a/MyWorkDashboard.Shared/Components/Common/TimeRangeInput.razor
+++ b/MyWorkDashboard.Shared/Components/Common/TimeRangeInput.razor
@@ -60,7 +60,7 @@
                 {
                     _fromHour = value.Value.Hour;
                     _fromMinute = value.Value.Minute;
-                    RaiseTimeChangeEvent();
+                    //RaiseTimeChangeEvent();
                 }
             }
             else
@@ -84,7 +84,7 @@
                 {
                     _toHour = value.Value.Hour;
                     _toMinute = value.Value.Minute;
-                    RaiseTimeChangeEvent();
+                    //RaiseTimeChangeEvent();
                 }
             }
             else
